# backend_django

./: .gitignore  README.md  pyproject.toml  setup.cfg
backend/: Makefile
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_place_route_user_alter_city_name_alter_city_uid_and_more.py  0002_remove_city_uid_city_id.py  0003_alter_city_name.py  0004_place.py  0005_rename_city_place_city_id_route.py
backend/backend/: settings.py  urls.py
backend_dj/: Makefile
backend_dj/api/: models.py  serializers.py  urls.py  views.py
backend_dj/backend_dj/: asgi.py  settings.py  urls.py  wsgi.py
